# divyastra

./: README.md  demo.py  pyproject.toml  requirements.txt  setup.py
---DIVYASTRA---Next-Generation-AI-Powered-Web-Penetration-Testing-Suite/: requirements.txt  setup.py
---DIVYASTRA---Next-Generation-AI-Powered-Web-Penetration-Testing-Suite/tests/: test_reconnaissance_debug.py
---DIVYASTRA---Next-Generation-AI-Powered-Web-Penetration-Testing-Suite/tests/agents/: test_web_recon.py
.github/workflows/: python-app.yml
agents/: web_recon.py  zero_day_hunter.py
modules/: reconnaissance.py
src/divyastra/: __init__.py  main.py
src/divyastra/agents/: zero_day_hunter.py
src/divyastra/ai/: models.py
src/divyastra/cli/: __init__.py  commands.py
src/divyastra/core/: agent.py  config.py  event_bus.py  logger.py  scanner.py  scope.py
src/divyastra/modules/: exploitation.py  reconnaissance.py  reporting.py  vulnerability_scanner.py
src/divyastra/utils/: config.py  logger.py
tests/: test_main.py
